--- a/force-app/main/default/staticresources/ReactComponent/index.html
+++ b/force-app/main/default/staticresources/ReactComponent/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Lightning React Component</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="main.css" />
 
 </head>
 
